# coroutines-report

./: .gitignore  README.md
docs/: presentation.key  report.key
slides/: presentation.pptx
src/01_coroutines/: 01_example.cpp  02_goal.cpp  CMakeLists.txt  example.cpp  goal.cpp
src/02_my_generator/: 01_eager.cpp  01_greedy.cpp  01_trivial.cpp  02_interleave.cpp  02_lazy.cpp  02_sequences.cpp  03_interleave_naive.cpp  03_vector_naive.cpp  04_interleave_coro.cpp  04_tree.cpp  04_vector_coro.cpp  05_tree_naive.cpp  06_tree_coro.cpp  CMakeLists.txt  generator.hpp
src/02_my_generator/generator/: CMakeLists.txt
src/03_std_generator/: 01_lazy.cpp  02_vector.cpp  03_tree.cpp  CMakeLists.txt
